# VIO

./: LICENSE  README.md
week0/: CMakeLists.txt  R_Quaternion_update.cpp  week0.docx
week0初识和四元数/: week0.docx
week0初识和四元数/权美香推荐资料/: 说明.txt
week1/: week1.docx  ~$week1.docx  ~WRL2938.tmp
week1/course2_hw_new/: readme.md
week1/course2_hw_new/vio_data_simulation/src/: imu.cpp
week1/imu_utils/devel/: .catkin  setup.sh
week1/imu_utils/devel/lib/bagconvert/: bagconvert
week1/imu_utils/devel/lib/pkgconfig/: bagconvert.pc  code_utils.pc  imu_utils.pc
week1/imu_utils/src/imu_utils/data/: data_imutest_acc_x.txt  data_imutest_acc_y.txt  (+9 more)
week1Allen方差法标定和IMU模拟/: week1.docx
week1Allen方差法标定和IMU模拟/course2_hw_new/vio_data_simulation-ros_version/src/: imu.cpp
week1Allen方差法标定和IMU模拟/course2_hw_new/vio_data_simulation/python_tool/: draw_trajcory.py
week2/: problem.cc  problem.h  week2.docx  【第三节代码】CurveFitting_LM.rar
week2IMU与视觉融合LM优化/: CurveFitting.cpp  week2.docx
week3/: 信息矩阵.xlsx
week3/course4/nullspace_test/: hessian_nullspace_test.cpp
week3滑动窗口/: week3.docx  信息矩阵.xlsx  结果.txt
week3滑动窗口/course4/nullspace_test/: CMakeLists.txt  hessian_nullspace_test.cpp
week4/hw_course5_new/: 代码运行结果.txt
week4/hw_course5_new/app/: TestMonoBA.cpp
week4/hw_course5_new/backend/: problem.cc
week4求解器/: week4.docx
week4求解器/hw_course5_new/: CMakeLists.txt
week4求解器/hw_course5_new/app/: TestMonoBA.cpp
week4求解器/hw_course5_new/backend/: edge_reprojection.cc  problem.cc  problem.h
week6VINS/: run_simdata.cpp  week6.docx
week7大作业/course8/: hw8.md
(+13 files in other folders)
